# SurycateBot

./: .flake8  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
archive/: _test_shell.py
archive/prompt/: test_prompt.py
archive/verbose_prompting/: README.md  verbose_loop.py  verbose_prompt.py
examples/: scratch_bash.py  single_task.py  tell_time.py
examples/Memories/: README.md  experience_template.yaml  knowledge_template.yaml  template.json  template.yaml  to_key_value_experiences.py  to_key_value_knowledge.py  to_key_value_memories.py
examples/context_info_prompts/: loop.py  prompt_template.py
examples/context_prompt_testing/: loop.py  prompts.py
examples/context_prompting/: CURRENT_TIME  README.md  change_folder_loop.py  context_prompt.py  linux_update.py  task_log.txt  tell_time_loop.py
examples/task_prompting/: README.md  prompt.py  single_task_log.txt  single_task_loop.py  tell_time_loop.py
experimentation/: pexpect_read.py  pexpect_replwrap.py  pexpect_spawn.py  scratch_llm.py  shell_exp.py  single_task.py  tell_time.py  terminal.py  wexpect_exp.py
experimentation/archive/: scratch_bash.py  scratch_popen_communication.py  shell_exp.py  terminal.py  wexpect_exp.py
src/surycate_bot_ls2716/: actions.py  core.py  llm.py  main.py  memory.py  memory2_faiss.py  memory_faiss.py  prompt.py  readme_flow.md  shell.py  tasks.py  utils.py
src/surycate_bot_ls2716.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_example.py
verbose_prompting/: README.md  verbose_loop.py
(+142 files in other folders)
