[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surycate_bot_ls2716"
version = "0.0.1"
authors = [
  { name="Lukasz Sliwinski", email="lukasz@ls314.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = "~=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"